Add "Enable pnpm"

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'pnpm'
+      - name: Enable pnpm
+        run: corepack enable pnpm
       - name: Install dependencies
         run: pnpm install
       - name: Build
